binrw/tests/ui/invalid_try_map_return_type.stderr
error[E0308]: mismatched types
 --> $DIR/invalid_try_map_return_type.rs:5:24
  |
5 |     #[br(try_map = |_| 0)]
  |                        ^ expected enum `Result`, found integer
  |
  = note: expected enum `Result<i32, _>`
             found type `{integer}`
help: try using a variant of the expected enum
  |
5 |     #[br(try_map = |_| Ok(0))]
  |                        ~~~~~
5 |     #[br(try_map = |_| Err(0))]
  |                        ~~~~~~
